2005/12/9 -- released version 20051209_trunk

2005/12/8 -- released version 20051208_trunk

2005/12/7 -- released version 20051207_trunk

2005/12/6 -- released version 20051206_trunk

2005/12/5 -- released version 20051205_trunk

2005/12/4 -- released version 20051204_trunk

2005/12/3 -- released version 20051203_trunk

* really send a test email with 'tSmoke --testmail' -- niko
* Curl.pm: handle measurement of multiple URLs by adding the results together
  -- niko, requested by Rob de Jong <rob *dejongnet.net>
* Curl.pm: new variables 'follow_redirects' and 'include_redirects'
  -- niko, requested by Rob de Jong <rob *dejongnet.net>

2005/12/2 -- released version 20051202_trunk

2005/12/1 -- released version 20051201_trunk

2005/11/30 -- released version 20051130_trunk

2005/11/29 -- released version 20051129_trunk

2005/11/28 -- released version 20051128_trunk

2005/11/27 -- released version 20051127_trunk

2005/11/26 -- released version 20051126_trunk

2005/11/25 -- released version 20051125_trunk

* fixed spelling for height -- tobi

2005/11/24 -- released version 20051124_trunk

2005/11/23 -- released version 20051123_trunk

2005/11/22 -- released version 20051122_trunk

2005/11/21 -- released version 20051121_trunk

2005/11/20 -- released version 20051120_trunk

2005/11/19 -- released version 20051119_trunk

2005/11/18 -- released version 20051118_trunk

2005/11/17 -- released version 20051117_trunk

2005/11/16 -- released version 20051116_trunk

2005/11/15 -- released version 20051115_trunk

* remove the FPing 'timeout' variable, since it never really did anything
  -- niko
* use the 'cgiurl' variable from the 'General' section for all CGI self-refering 
  links -- niko, from Christian Hammers <ch .*debian.org> (Debian bug #339019)

2005/11/14 -- released version 20051114_trunk

2005/11/13 -- released version 20051113_trunk

2005/11/12 -- released version 20051112_trunk

2005/11/11 -- released version 20051111_trunk
