@@ -1,3 +1,5 @@
+2005/12/10 -- released version 20051210_trunk
+
 2005/12/9 -- released version 20051209_trunk
 
 2005/12/8 -- released version 20051208_trunk
